Adding packages folder

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="shared.css">
     <link rel="stylesheet" href="main.css">
 </head>
 
@@ -22,13 +23,13 @@
         <nav class="heading aligning valign">
             <ul class="heading pad">
                 <li class="heading">
-                    <a href="packages/index.html" class = "anc">Packages</a>
+                    <a href="./packages/packages.html" class = "anc">Packages</a>
                 </li>
                 <li class="heading">
                     <a href="customers/index.html" class = "anc">Customers</a>
                 </li>
-                <li class="heading">
-                    <a href="start-hosting/index.html" class = "anc">Start Hosting</a>
+                <li class="hosting">
+                    <a href="start-hosting/index.html">Start Hosting</a>
                 </li>
             </ul>
         </nav>
