Adding packages styles

--- a/packages/packages.html
+++ b/packages/packages.html
@@ -34,7 +34,28 @@
         </nav>
     </header>
     <main>
-        
+        <section class="main-section">
+            <a href="#"  class="plans">
+                <h1 class="plan-name">Our PLUS Plan</h1>
+                <h2 class="plan-highlight">The most popular choice of our customers.</h2>
+                <p class="plan-description">Benefit from increased storage and faster support to ensure that your mission-critical data and applications
+                    are always available!</p>
+            </a>
+        </section>
+        <section class="main-section">
+            <a href="#"  class="plans">
+                <h1 class="plan-name">Our FREE Plan</h1>
+                <h2 class="plan-highlight">An extremely solid start into our hosting world.</h2>
+                <p class="plan-description">Get started immediately at zero cost!</p>
+            </a>
+        </section>
+        <section class="main-section main-section__premium">
+            <a href="#" class="plans">
+                <h1 class="plan-name_premium">Our PREMIUM Plan</h1>
+                <h2 class="plan-highlight">All your enterprise needs. Instant support, guaranteed uptime. </h2>
+                <p class="plan-description">The best solution for small to large enterprises. Because hosting shouldn't be in the way!</p>
+            </a>
+        </section>
     </main>
     <footer class="main-footer">
     	<nav>
