Fixing Navigation Bar

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </section>
         <section id="plans">
             <h1 class="section-title">Choose Your Plan</h1>
-            <div>
+            <div class="plan-cover">
                 <article class ="plans">
                     <h1>FREE</h1>
                     <h2>$0/month</h2>
