--- a/packages/packages.html
+++ b/packages/packages.html
@@ -42,14 +42,14 @@
                     are always available!</p>
             </a>
         </section>
-        <section class="main-section">
+        <section class="main-section__second">
             <a href="#"  class="plans">
                 <h1 class="plan-name">Our FREE Plan</h1>
                 <h2 class="plan-highlight">An extremely solid start into our hosting world.</h2>
                 <p class="plan-description">Get started immediately at zero cost!</p>
             </a>
         </section>
-        <section class="main-section main-section__premium">
+        <section class="main-section main-section__premium clear-fix">
             <a href="#" class="plans">
                 <h1 class="plan-name_premium">Our PREMIUM Plan</h1>
                 <h2 class="plan-highlight">All your enterprise needs. Instant support, guaranteed uptime. </h2>
