--- a/packages/packages.html
+++ b/packages/packages.html
@@ -1,74 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Packages</title>
-    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="../shared.css">
-    <link rel="stylesheet" href="packages.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Packages</title>
+        <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+        <link rel="stylesheet" href="../shared.css">
+        <link rel="stylesheet" href="packages.css">
+    </head>
 
-<body>
-
-    <header class="header-main">
-        <div class="heading valign">
-            <a href="../index.html" class = "anc">
-                uHost
-            </a>
+    <body>
+        <div class="background-img">
+            <header class="header-main">
+                <div class="heading valign">
+                    <a href="../index.html" class = "anc">
+                        uHost
+                    </a>
+                </div>
+                <nav class="heading aligning valign">
+                    <ul class="heading pad">
+                        <li class="heading">
+                            <a href="packages.html" class = "anc">Packages</a>
+                        </li>
+                        <li class="heading">
+                            <a href="customers/index.html" class = "anc">Customers</a>
+                        </li>
+                        <li class="hosting">
+                            <a href="start-hosting/index.html">Start Hosting</a>
+                        </li>
+                    </ul>
+                </nav>
+            </header>
+            <main>
+                <section class="main-section">
+                    <a href="#"  class="plans">
+                        <h1 class="plan-name">Our PLUS Plan</h1>
+                        <h2 class="plus-badge">RECOMMENDED</h2>
+                        <h2 class="plan-highlight">The most popular choice of our customers.</h2>
+                        <p class="plan-description">Benefit from increased storage and faster support to ensure that your mission-critical data and applications
+                            are always available!</p>
+                    </a>
+                </section>
+                <section class="main-section__second">
+                    <a href="#"  class="plans">
+                        <h1 class="plan-name">Our FREE Plan</h1>
+                        <h2 class="plan-highlight">An extremely solid start into our hosting world.</h2>
+                        <p class="plan-description">Get started immediately at zero cost!</p>
+                    </a>
+                </section>
+                <section class="main-section main-section__premium clear-fix">
+                    <a href="#" class="plans">
+                        <h1 class="plan-name_premium">Our PREMIUM Plan</h1>
+                        <h2 class="plan-highlight">All your enterprise needs. Instant support, guaranteed uptime. </h2>
+                        <p class="plan-description">The best solution for small to large enterprises. Because hosting shouldn't be in the way!</p>
+                    </a>
+                </section>
+            </main>
+            <footer class="main-footer">
+            	<nav>
+        	    	<ul class="main-footer__total">
+        	    		<li class="main-footer__list">
+        	    			<a href="" class="main-footer__element">Support</a>
+        	    		</li>
+        	    		<li  class="main-footer__list">
+        	    			<a href="" class="main-footer__element">Terms of use</a>
+        	    		</li>
+        	    	</ul>
+        	    </nav>
+            </footer>
         </div>
-        <nav class="heading aligning valign">
-            <ul class="heading pad">
-                <li class="heading">
-                    <a href="packages.html" class = "anc">Packages</a>
-                </li>
-                <li class="heading">
-                    <a href="customers/index.html" class = "anc">Customers</a>
-                </li>
-                <li class="hosting">
-                    <a href="start-hosting/index.html">Start Hosting</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="main-section">
-            <a href="#"  class="plans">
-                <h1 class="plan-name">Our PLUS Plan</h1>
-                <h2 class="plan-highlight">The most popular choice of our customers.</h2>
-                <p class="plan-description">Benefit from increased storage and faster support to ensure that your mission-critical data and applications
-                    are always available!</p>
-            </a>
-        </section>
-        <section class="main-section__second">
-            <a href="#"  class="plans">
-                <h1 class="plan-name">Our FREE Plan</h1>
-                <h2 class="plan-highlight">An extremely solid start into our hosting world.</h2>
-                <p class="plan-description">Get started immediately at zero cost!</p>
-            </a>
-        </section>
-        <section class="main-section main-section__premium clear-fix">
-            <a href="#" class="plans">
-                <h1 class="plan-name_premium">Our PREMIUM Plan</h1>
-                <h2 class="plan-highlight">All your enterprise needs. Instant support, guaranteed uptime. </h2>
-                <p class="plan-description">The best solution for small to large enterprises. Because hosting shouldn't be in the way!</p>
-            </a>
-        </section>
-    </main>
-    <footer class="main-footer">
-    	<nav>
-	    	<ul class="main-footer__total">
-	    		<li class="main-footer__list">
-	    			<a href="" class="main-footer__element">Support</a>
-	    		</li>
-	    		<li  class="main-footer__list">
-	    			<a href="" class="main-footer__element">Terms of use</a>
-	    		</li>
-	    	</ul>
-	    </nav>
-    </footer>
-</body>
+    </body>
 
 </html>
